start log and user stats service
